--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "nextra-docs-template",
+  "name": "portfolio",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "coyote's portfolio",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "prepare": "husky install",
     "start": "next start"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
+    "url": "git+https://github.com/CoyoteWaltz/portolio"
   },
-  "author": "Shu Ding <g@shud.in>",
+  "author": "CoyoteWaltz",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
-  },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
     "next": "^13.0.6",
     "nextra": "latest",
@@ -25,7 +22,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.6.3",
     "@types/node": "18.11.10",
-    "typescript": "^4.9.3"
+    "commitlint": "^17.6.1",
+    "husky": "^8.0.3",
+    "typescript": "^5"
   }
 }
