--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "eslint": "^8.42.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "tsup": "^6.7.0",
+    "tsx": "^3.12.7",
     "typescript": "^5.0.4",
     "zx": "^7.2.2"
   },
   "lint-staged": {
-    "**/*.{js,ts,tsx,jsx,json}": "eslint . --fix"
+    "scripts/*.{js,ts,tsx,jsx}": "eslint . --fix"
   }
 }
