--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "dev": "next dev",
+    "dev:layout": "./scripts/layout/layout.mts",
     "build": "next build",
     "prepare": "husky install",
     "start": "next start"
@@ -27,13 +28,16 @@
     "@antfu/eslint-config": "^0.39.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@types/node": "18.11.10",
+    "@types/title": "^3.4.1",
     "commitlint": "^17.6.5",
     "eslint": "^8.42.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "title": "^3.5.3",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4",
+    "zod": "^3.21.4",
     "zx": "^7.2.2"
   },
   "lint-staged": {
