--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
         run: npm install --global vercel@latest pnpm
+      - name: Install Deps
+        run: pnpm install
       - name: Build Content Layout
         run: pnpm run build:layout
       - name: Pull Vercel Environment Information
