--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -13,10 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version-file: ".nvmrc"
       - name: Install Vercel CLI
         run: npm install --global vercel@latest pnpm
       - name: Check Node Version
-        run: nvm current
+        run: node --version
       - name: Install Deps
         run: pnpm install
       - name: Check out Markdown repo
