--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -16,10 +16,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest pnpm
       - name: Check Node Version
         run: node --version
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest pnpm
       - name: Install Deps
         run: pnpm install
       - name: Check out Markdown repo
@@ -27,6 +27,10 @@ jobs:
         with:
           repository: CoyoteWaltz/MarkdownNotes
           token: ${{ secrets.PAT_TOKEN }}
+          path: "./temp"
+      - name: List Files
+        run: |
+          ls ${{ github.workspace }}
       - name: Build Content Layout
         run: pnpm run build:layout
       - name: Pull Vercel Environment Information
