--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "dev": "next dev",
+    "dev:layout": "DEV=true ./scripts/layout/index.mts",
     "build:layout": "./scripts/layout/index.mts",
     "build": "next build",
     "prepare": "husky install",
