--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -3,11 +3,11 @@ env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 run-name: ${{ github.actor }} is deploying site to Vercel  🚀
-# on: [workflow_dispatch]
-on:
-  push:
-    branches:
-      - main
+on: [workflow_dispatch]
+# on:
+#   push:
+#     branches:
+#       - main
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
