--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
       - uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
@@ -34,12 +36,12 @@ jobs:
           ls ${{ github.workspace }}
       - name: Build Content Layout
         run: pnpm run build:layout
-      - name: Build Content Layout
+      - name: Push Commit For New Pages
         run: |
-          git config user.name github-actions
+          git config user.name vercel-deploy-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -m "ci: sync markdown after run layout"
+          git commit -m "ci: sync markdown after run layout" --no-verify
           git push
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
