--- a/package.json
+++ b/package.json
@@ -19,22 +19,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "next": "^13.4.4",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.69.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@types/node": "18.11.10",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/title": "^3.4.1",
+    "autoprefixer": "^10.4.16",
     "commitlint": "^17.6.5",
     "eslint": "^8.42.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "postcss": "^8.4.31",
     "replace-in-file": "^7.0.1",
+    "tailwindcss": "^3.3.3",
     "title": "^3.5.3",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
