--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.4"
+    "sass": "^1.69.4",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.5",
@@ -43,7 +44,6 @@
     "replace-in-file": "^7.0.1",
     "tailwindcss": "^3.3.3",
     "title": "^3.5.3",
-    "tsup": "^6.7.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4",
     "zod": "^3.21.4",
