--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "zx": "^7.2.2"
   },
   "lint-staged": {
-    "./scripts/**/*.{js,ts,tsx,jsx}": "eslint ./scripts/** --fix"
+    "./scripts/**/*.{js,ts,tsx,jsx}": "eslint ./scripts/** --fix",
+    "./components/**/*.{js,ts,tsx,jsx}": "eslint ./scripts/** --fix"
   }
 }
