--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -41,11 +41,11 @@ jobs:
         run: pnpm run build:layout
       - name: Push Commit For New Pages
         run: |
+          git config --global --unset http.proxy
           git config user.name vercel-deploy-actions
           git config user.email coyote_waltz@163.com
           git add .
-          git remote set-url origin https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}
-          git config --global --unset http.proxy
+          # git remote set-url origin https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}
           git commit --allow-empty -m "ci: sync markdown after run layout [skip actions]" --no-verify
           git push
       - name: Pull Vercel Environment Information
