--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "dependencies": {
     "classnames": "^2.3.2",
     "next": "^14.2.15",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest",
+    "nextra": "2",
+    "nextra-theme-docs": "2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.4",
